k8s/overlays/local/patches/patch-kafka-local-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: shop-msa-app
spec:
  template:
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka
          ports:
            - name: kafka
              containerPort: 9092
            - name: controller
              containerPort: 9093
