k8s/overlays/local/patches/patch-local-sizing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: shop-msa-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-admin
  namespace: shop-msa-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: shop-msa-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: shop-msa-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: shop-msa-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: shop-msa-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: shop-msa-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-event-service
  namespace: shop-msa-app
spec:
  replicas: 1
