k8s/overlays/local/patches/patch-storageclass-default.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: shop-msa-app
spec:
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        storageClassName: standard
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: shop-msa-app
spec:
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        storageClassName: standard
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50Gi
