k8s/overlays/local/patches/patch-kafka-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: shop-msa-app
spec:
  # Headless Service required for StatefulSet stable DNS:
  # kafka-0.kafka.shop-msa-app.svc.cluster.local
  clusterIP: None
  publishNotReadyAddresses: true
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: shop-msa-app
spec:
  template:
    spec:
      containers:
        - name: kafka
          readinessProbe:
            timeoutSeconds: 5
          livenessProbe:
            timeoutSeconds: 5
